--- a/app/assets/css/base.css
+++ b/app/assets/css/base.css
@@ -32,6 +32,7 @@ html, body, #app, #__nuxt {
 
 .container,
 .container .columns {
+  width: 100%;
   height: 100%;
   margin-top: 0;
   margin-bottom: 0;
